# basic-garbage-collector

./: CMakeLists.txt  README.md  global_includes.h  main.cpp
example/: example_class.cpp  example_class.h
objects/: garbage_collected_object.cpp  garbage_collected_object.h
repository/: ClassRepository.cpp  ClassRepository.h
